force-app/main/default/objects/NPP__c/fields/HQ_Employer_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>HQ_Employer_Phone_Number__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Employer Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>