force-app/main/default/objects/NPP__c/fields/HQ_Entire_Medical_Record_Specific_Date__c.field-meta.xml
<CustomField>
    <fullName>HQ_Entire_Medical_Record_Specific_Date__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Entire medical record or specific date R</label>
    <type>Date</type>
</CustomField>