force-app/main/default/objects/NPP__c/fields/HQ_Evaluated_for_Bunion_Before__c.field-meta.xml
<CustomField>
    <fullName>HQ_Evaluated_for_Bunion_Before__c</fullName>
    <label>Evaluated for Bunion Before?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>