force-app/main/default/objects/NPP__c/fields/HQ_Ever_Had_Kawasaki_Disease__c.field-meta.xml
<CustomField>
    <fullName>HQ_Ever_Had_Kawasaki_Disease__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <description>Do you have a history of Kawasaki disease?</description>
    <inlineHelpText>Do you have a history of Kawasaki disease?</inlineHelpText>
    <label>Ever Had Kawasaki Disease?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>