force-app/main/default/objects/NPP__c/fields/HQ_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>HQ_Expiration_Date__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Expiration Date</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>