force-app/main/default/objects/NPP__c/fields/HQ_Explain__c.field-meta.xml
<CustomField>
    <fullName>HQ_Explain__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Explain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>