force-app/main/default/objects/NPP__c/fields/HQ_Family_Medical_History__c.field-meta.xml
<CustomField>
    <fullName>HQ_Family_Medical_History__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Family medical history</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>High Blood Pressure</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Rheumatoid Arthritis</fullName>
            </value>
            <value>
                <fullName>Stroke</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>