force-app/main/default/objects/NPP__c/fields/HQ_Fax_Records_to__c.field-meta.xml
<CustomField>
    <fullName>HQ_Fax_Records_to__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Fax records to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>