force-app/main/default/objects/NPP__c/fields/HQ_Feet__c.field-meta.xml
<CustomField>
    <fullName>HQ_Feet__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Feet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>