force-app/main/default/objects/NPP__c/fields/HQ_Foot_Tightness_with_Socks_Shoes__c.field-meta.xml
<CustomField>
    <fullName>HQ_Foot_Tightness_with_Socks_Shoes__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Foot Tightness with Socks/Shoes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>