force-app/main/default/objects/NPP__c/fields/HQ_Get_Medical_Records__c.field-meta.xml
<CustomField>
    <fullName>HQ_Get_Medical_Records__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Get medical records</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Entire medical record</fullName>
            </value>
            <value>
                <fullName>Specific date range of treatment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>