force-app/main/default/objects/NPP__c/fields/HQ_Goals_holded_because_of_Pain__c.field-meta.xml
<CustomField>
    <fullName>HQ_Goals_holded_because_of_Pain__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Goals holded because of Pain</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Return to recreational activities</fullName>
            </value>
            <value>
                <fullName>Giving 100% with my family-at work or at the gym</fullName>
            </value>
            <value>
                <fullName>Having a pain free life &amp; free to take on new experiences.</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>