force-app/main/default/objects/NPP__c/fields/HQ_goals_would_like_to_accomplish_Other__c.field-meta.xml
<CustomField>
    <fullName>HQ_goals_would_like_to_accomplish_Other__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Goals  would like to accomplish other</label>
    <length>2555</length>
    <type>LongTextArea</type>
</CustomField>