force-app/main/default/objects/NPP__c/fields/HQ_had_any_of_the_following_performed__c.field-meta.xml
<CustomField>
    <fullName>HQ_had_any_of_the_following_performed__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Had any of the following performed ?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>X-Ray</fullName>
                <label>X-ray</label>
            </value>
            <value>
                <fullName>MRI</fullName>
            </value>
            <value>
                <fullName>EMG</fullName>
            </value>
            <value>
                <fullName>CT Scan</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>