force-app/main/default/objects/NPP__c/fields/HQ_Heart_Arrhythmia_Murmur__c.field-meta.xml
<CustomField>
    <fullName>HQ_Heart_Arrhythmia_Murmur__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <description>Do you have a history of heart arrhythmia/murmur?</description>
    <inlineHelpText>Do you have a history of heart arrhythmia/murmur?</inlineHelpText>
    <label>Heart Arrhythmia/Murmur?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>