force-app/main/default/objects/NPP__c/fields/HQ_Height__c.field-meta.xml
<CustomField>
    <fullName>HQ_Height__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Height</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>