force-app/main/default/objects/NPP__c/fields/HQ_History_of_following_Other__c.field-meta.xml
<CustomField>
    <fullName>HQ_History_of_following_Other__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>History of following Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>