force-app/main/default/objects/NPP__c/fields/HQ_History_of_Lower_Leg_Ulcers_or_Sores__c.field-meta.xml
<CustomField>
    <fullName>HQ_History_of_Lower_Leg_Ulcers_or_Sores__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>History of Lower Leg Ulcers or Sores</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>