force-app/main/default/objects/NPP__c/fields/HQ_Home_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>HQ_Home_Phone_Number__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Home Phone Number</label>
    <type>Phone</type>
</CustomField>