force-app/main/default/objects/NPP__c/fields/HQ_How_did_you_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>HQ_How_did_you_hear_about_us__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>How did you hear about us?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Returning/Existing Patient</fullName>
            </value>
            <value>
                <fullName>Internet - Google</fullName>
            </value>
            <value>
                <fullName>Internet - Non-Google</fullName>
            </value>
            <value>
                <fullName>Internet - Chiromatrix</fullName>
            </value>
            <value>
                <fullName>NJSW Website</fullName>
            </value>
            <value>
                <fullName>AO Website</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Referral - Doctor</fullName>
            </value>
            <value>
                <fullName>Referral - Employee</fullName>
            </value>
            <value>
                <fullName>Referral - MVA</fullName>
            </value>
            <value>
                <fullName>Referral - Patient</fullName>
            </value>
            <value>
                <fullName>Referral - Work Accident</fullName>
            </value>
            <value>
                <fullName>Billboard</fullName>
            </value>
            <value>
                <fullName>Dr. Bill Klepper</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Radio 101.5</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Walk In/ Drive By</fullName>
            </value>
            <value>
                <fullName>Winback</fullName>
            </value>
            <value>
                <fullName>ZocDoc</fullName>
            </value>
            <value>
                <fullName>Parisi Speed School</fullName>
            </value>
            <value>
                <fullName>Escape Fitness Now</fullName>
            </value>
            <value>
                <fullName>MVA Campaign</fullName>
            </value>
            <value>
                <fullName>CallRail</fullName>
            </value>
            <value>
                <fullName>July 2023 Orthotics Reactivation</fullName>
            </value>
            <value>
                <fullName>Kean University</fullName>
            </value>
            <value>
                <fullName>Former NJ Spine</fullName>
            </value>
            <value>
                <fullName>Super Football Conference</fullName>
            </value>
            <value>
                <fullName>Khatri Spine Campaign</fullName>
            </value>
            <value>
                <fullName>Mailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>