force-app/main/default/objects/NPP__c/fields/HQ_How_many_doses_received_and_when__c.field-meta.xml
<CustomField>
    <fullName>HQ_How_many_doses_received_and_when__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>How many doses received and when?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doses:</fullName>
                <label>Doses</label>
            </value>
            <value>
                <fullName>☐1 Date_________</fullName>
                <label>1 Date</label>
            </value>
            <value>
                <fullName>☐2 Date_________</fullName>
                <label>2 Date</label>
            </value>
            <value>
                <fullName>☐3 Date_________</fullName>
                <label>3 Date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>