force-app/main/default/objects/NPP__c/fields/HQ_HR_Contact_s_Name_if_known__c.field-meta.xml
<CustomField>
    <fullName>HQ_HR_Contact_s_Name_if_known__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Contact&apos;s Name (if known)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>