force-app/main/default/objects/NPP__c/fields/HQ_I_may_be_contaced_at_email_address__c.field-meta.xml
<CustomField>
    <fullName>HQ_I_may_be_contaced_at_email_address__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>I may be contaced at (email address)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>