force-app/main/default/objects/NPP__c/fields/HQ_Insurance_Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>HQ_Insurance_Carrier_Name__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Insurance carrier name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>