force-app/main/default/objects/NPP__c/fields/HQ_Insurance_Coverage_Source__c.field-meta.xml
<CustomField>
    <fullName>HQ_Insurance_Coverage_Source__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Insurance coverage source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Motor vehicle accident</fullName>
            </value>
            <value>
                <fullName>Workers compensation claim</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>