force-app/main/default/objects/NPP__c/fields/HQ_Insurance_coverage_through_Family__c.field-meta.xml
<CustomField>
    <fullName>HQ_Insurance_coverage_through_Family__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Insurance coverage through family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>