force-app/main/default/objects/NPP__c/fields/HQ_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>HQ_Job_Title__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>