force-app/main/default/objects/NPP__c/fields/HQ_Last_Doctor_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>HQ_Last_Doctor_Visit_Date__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Last doctor visit date</label>
    <length>250</length>
    <type>Text</type>
</CustomField>