force-app/main/default/objects/NPP__c/fields/HQ_legs_feel_better_with_rest__c.field-meta.xml
<CustomField>
    <fullName>HQ_legs_feel_better_with_rest__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Legs feel better with rest or elevation?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>