force-app/main/default/objects/NPP__c/fields/HQ_legs_feel_heavy_tired_achy_or__c.field-meta.xml
<CustomField>
    <fullName>HQ_legs_feel_heavy_tired_achy_or__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Legs feel heavy, tired, achy, or swell?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>