force-app/main/default/objects/NPP__c/fields/HQ_legs_swell_at_the_end_of_the_day__c.field-meta.xml
<CustomField>
    <fullName>HQ_legs_swell_at_the_end_of_the_day__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Legs swell at the end of the day?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>