force-app/main/default/objects/NPP__c/fields/HQ_Member_DOB__c.field-meta.xml
<CustomField>
    <fullName>HQ_Member_DOB__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Member DOB</label>
    <type>Date</type>
</CustomField>