force-app/main/default/objects/NPP__c/fields/HQ_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>HQ_Member_ID__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Member ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>