force-app/main/default/objects/NPP__c/fields/HQ_Message_Permission_for_Medical_Care__c.field-meta.xml
<CustomField>
    <fullName>HQ_Message_Permission_for_Medical_Care__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Message permission for medical care/resu</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>