force-app/main/default/objects/NPP__c/fields/HQ_Morning_vs_Evening_Leg_Comfort__c.field-meta.xml
<CustomField>
    <fullName>HQ_Morning_vs_Evening_Leg_Comfort__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Morning vs. Evening Leg Comfort</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>