force-app/main/default/objects/NPP__c/fields/HQ_Name__c.field-meta.xml
<CustomField>
    <fullName>HQ_Name__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <externalId>true</externalId>
    <label>Patient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>