force-app/main/default/objects/NPP__c/fields/HQ_Name_of_Designated_Representative__c.field-meta.xml
<CustomField>
    <fullName>HQ_Name_of_Designated_Representative__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Name of designated representative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>