force-app/main/default/objects/NPP__c/fields/HQ_new_surgeries_procedure_If_yes__c.field-meta.xml
<CustomField>
    <fullName>HQ_new_surgeries_procedure_If_yes__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>New surgeries/procedure If yes</label>
    <length>2555</length>
    <type>LongTextArea</type>
</CustomField>