force-app/main/default/objects/NPP__c/fields/HQ_Occupational_Physical_Demands__c.field-meta.xml
<CustomField>
    <fullName>HQ_Occupational_Physical_Demands__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Occupational physical demands</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active: Movement filled with standing for long periods of time and little rest</fullName>
            </value>
            <value>
                <fullName>Mainly Sitting: Such as Desk Work or behind a computer</fullName>
                <label>Mainly sitting: Such as desk work or behind a computer</label>
            </value>
            <value>
                <fullName>Sports based: Constant movement and exercise</fullName>
            </value>
            <value>
                <fullName>Heavy: Physical demands including heavy lifting  machinery or using tools driving or using equipment</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>