force-app/main/default/objects/NPP__c/fields/HQ_Onset_of_Pain__c.field-meta.xml
<CustomField>
    <fullName>HQ_Onset_of_Pain__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Onset of pain</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-3 Months</fullName>
            </value>
            <value>
                <fullName>4-6 Months</fullName>
            </value>
            <value>
                <fullName>7-12 Months</fullName>
            </value>
            <value>
                <fullName>&gt;1 Year ago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>