force-app/main/default/objects/NPP__c/fields/HQ_Other_Allergies__c.field-meta.xml
<CustomField>
    <fullName>HQ_Other_Allergies__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Other allergies</label>
    <length>2555</length>
    <type>LongTextArea</type>
</CustomField>