force-app/main/default/objects/NPP__c/fields/HQ_Packs_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>HQ_Packs_Per_Day__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Packs per day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>