force-app/main/default/objects/NPP__c/fields/HQ_Pain_Level_Numeric_Rating_Scale__c.field-meta.xml
<CustomField>
    <fullName>HQ_Pain_Level_Numeric_Rating_Scale__c</fullName>
    <complianceGroup>HIPAA</complianceGroup>
    <label>Pain Level (Numeric Rating Scale)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>